--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,81 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+line-height: 1.5;
+font-weight: 400;
+
+font-synthesis: none;
+text-rendering: optimizeLegibility;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+
+
+--background-color: #ffffff;
+--text-color: #213547;
+--dark-navy: #eaeaea;
+--navy: #f5f5f5;
+--light-navy: #ffffff;
+--lightest-navy: #fafafa;
+--navy-shadow: rgba(200, 200, 200, 0.7);
+--dark-slate: #2e2e2e;
+--slate: #3c3c3c;
+--light-slate: #595959;
+--lightest-slate: #6e6e6e;
+--white: #1a1a1a;
+--green: #3cb371;
+--light-green: #81c784;
+--green-tint: rgba(60, 179, 113, 0.1);
+--pink: #d17bb5;
+--blue: #5a9bd4;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+
+.light {
+--background-color: #ffffff;
+--text-color: #213547;
+--dark-navy: #eaeaea;
+--navy: #f5f5f5;
+--light-navy: #ffffff;
+--lightest-navy: #fafafa;
+--navy-shadow: rgba(200, 200, 200, 0.7);
+--dark-slate: #2e2e2e;
+--slate: #3c3c3c;
+--light-slate: #595959;
+--lightest-slate: #6e6e6e;
+--white: #1a1a1a;
+--green: #3cb371;
+--light-green: #81c784;
+--green-tint: rgba(60, 179, 113, 0.1);
+--pink: #d17bb5;
+--blue: #5a9bd4;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.dark {
+--background-color: #242424;
+--text-color: rgba(255, 255, 255, 0.87);
+--navy: #0a192f;
+--light-navy: #112240;
+--lightest-navy: #233554;
+--navy-shadow: rgba(2, 12, 27, 0.7);
+--dark-slate: #495670;
+--slate: #8892b0;
+--light-slate: #a8b2d1;
+--lightest-slate: #ccd6f6;
+--white: #e6f1ff;
+--green: #64ffda;
+--light-green: #b0fae8;
+--green-tint: rgba(100, 255, 218, 0.1);
 }
+
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+background-color: var(--background-color);
+color: var(--text-color);
+transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+strong {
+color: var(--text-color);
+font-weight: 600;
 }
