--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,38 +5,44 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  --background-color: #ffffff;
-  --text-color: #213547;
-  --dark-navy: #eaeaea;
-  --navy: #f5f5f5;
-  --light-navy: #ffffff;
-  --lightest-navy: #fafafa;
-  --navy-shadow: rgba(200, 200, 200, 0.7);
-  --dark-slate: #2e2e2e;
-  --slate: #3c3c3c;
-  --light-slate: #595959;
-  --lightest-slate: #6e6e6e;
-  --white: #1a1a1a;
-  --green: #3cb371;
-  --light-green: #81c784;
-  --green-tint: rgba(60, 179, 113, 0.1);
-  --blue-slate: #ccd6f6;
+  --color-bg-default: #ffffff;
+  --color-text-primary: #213547;
+  --color-text-primary_80: rgba(33, 53, 71, 0.8);
+  --color-text-primary_70: rgba(33, 53, 71, 0.7);
+  --color-text-primary_50: rgba(33, 53, 71, 0.5);
+  --color-text-primary_20: rgba(33, 53, 71, 0.2);
+  --color-gray-50: #fafafa;
+  --color-gray-100: #f5f5f5;
+  --color-gray-200: #eaeaea;
+  --shadow-gray: rgba(200, 200, 200, 0.7);
+
+  --color-slate-800: #2e2e2e;
+  --color-slate-700: #3c3c3c;
+  --color-slate-500: #595959;
+  --color-slate-400: #6e6e6e;
+  --color-slate-200: #ccd6f6;
+
+  --color-white: #ffffff;
+  --color-black: #1a1a1a;
+
+  --color-green-500: #3cb371;
+  --color-green-300: #81c784;
+  --color-green-500_10: rgba(60, 179, 113, 0.1);
 }
 
 body {
-  background-color: var(--background-color);
-  color: var(--text-color);
+  background-color: var(--color-bg-default);
+  color: var(--color-text-primary);
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
 strong {
-  color: var(--text-color);
+  color: var(--color-text-primary);
   font-weight: 600;
 }
 
