--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@
   --color-text-primary: #213547;
   --color-text-primary_80: rgba(33, 53, 71, 0.8);
   --color-text-primary_70: rgba(33, 53, 71, 0.7);
+    --color-text-primary_60: rgba(33, 53, 71, 0.6);
   --color-text-primary_50: rgba(33, 53, 71, 0.5);
   --color-text-primary_20: rgba(33, 53, 71, 0.2);
   --color-gray-50: #fafafa;
